<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Task</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_demo">Demo</string>
    <string name="action_menu_about">About</string>
    <string name="action_menu_help">Help</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="about_app_name">QUICK TASK</string>
    
    <string name="about_name_developer">Copyright: Trần Minh Quý</string>
    
    <string name="about_class">Class: Android LAND_004_005T6CN</string>
    
    <string name="about_year">Year: 2015</string>
    
    <string name="about_email">Email: minhquylt95@gmail.com</string>
    
    <string name="about_phone_number">Phone: 0169 322 7489</string>

</resources>
