<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_menu_settings"/>
    
    <item
        android:id="@+id/action_menu_demo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_menu_demo"/>
	
    <item
        android:id="@+id/action_menu_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_menu_help"/>
    
    <item
        android:id="@+id/action_menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_menu_about"/>

</menu>
